# digit-ai

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: app.h  canvas.h  mnist.h  nn.h
src/: app.c  canvas.c  main.c  mnist.c  nn.c
src/app/: app.c
